--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>no.westerdals.heiola13</groupId>
   <artifactId>skolearbeid</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>skolearbeid</name>
   <url>http://maven.apache.org</url>
